text align right fixed

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -261,3 +261,6 @@ APPLICATION
 	height:7px;
 	background:#231F20;
 }
+.fixed-nav .nav {
+	text-align:right;
+}
